index.css
* {
  box-sizing: border-box;
}

body {
  font-family: Arial;
}

.nav-bar {
  height: 30px;
}

.site-logo {
  position: relative;
  left: 30px;
  border-radius: 50%;
  width: 60px;
}

.site-title {
  font-weight: bold;
  color: red;
  font-size: 14px;
  position: relative;
  left: 40px;
  top: -35px;
}

.list {
  position: relative;
  top: -35px;
  font-weight: bold;
  color: red;
  font-size: 14px;
}

.list-a {
  color: darkgray;
  padding: 5px;
  margin: 0 30px 0px 0;
}

.active {
  margin-left: 30%;
  color: gray;
}

.list-a:hover{
  color: gray;
}

.column_1 {
  width: 70%;
  height: 300px;
  float: left;
}

.column_2 {
  width: 30%;
  height: 300px;
  float: left;
  background-color: #ea474c;
}

.recipe_section { width: 100%; height: 1400px; margin-bottom: 20px; background-color: #f6f6f6 }

.recipe_title { position: relative; top: 30px; padding-bottom: 30px; }

.filter_wrapper { float: left; width: 20%; font-weight: bold; padding: 12px; }

.filter_minus { margin-left: 100px; font-weight: bold }

.img_cls { width: 70%; height: 300px; object-fit: cover; float: left; }

.recipe_img { width: 250px; height: 170px; object-fit: cover; }

.recipe_card { margin: 10px 0 0 10px; width: 23%;}

.recipe_card_title { font-size: 10px; text-transform: uppercase; font-weight: bold;  margin: 5px; }

.send_btn { margin: 40px 0 0 300px; }

.p_title { font-size: 10px; font-weight: bold; }

.p_para { font-size: 8px; }

.p_link { font-size: 8px; color: red; font-weight: bold; }

.button_attr {
  background-color: white;
  color: #808080;
  height: 35px;
  width: 150px;
  border-radius: 5px;
  font-weight: bold;
  font-size: smaller;
  border: 1px solid white;
}

.text_box {
  border-radius: 5px;
  height: 40px;
  border: 1px solid white
}

.white_font {
  font-size: smaller;
  color: white;
}

.red_box {
  background-color: #ea474c;
  border-radius: 5px;
}

.recipe_col {
  float: left;
  width: 25%;
}

/*Checkbox begin*/

.container {
  display: block;
  position: relative;
  padding-left: 20px;
  margin-bottom: 10px;
  margin-left: 10px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;  
}

/* Hide the browser's default checkbox */
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 15px;
  width: 15px;
  background-color: #eee;
  border-radius: 15px;
}

/* On mouse-over, add a grey background color */
.container:hover input ~ .checkmark {
  background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.container input:checked ~ .checkmark {
  background-color: white;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.container .checkmark:after {
  left: 4px;
  top: 2px;
  right: 2px;
  width: 5px;
  height: 9px;
  border: solid black;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

/*Checkbox end*/


@media screen and (max-width: 800px) {
  .column_1 {
    width: 40%;
  }

  .column_2 {
    width: 30%;
  }

  .list-a {
    color: darkgray;
    padding: 2px;
    margin: 0 10px 0 0;
  }

  .site-title {
    margin: 0 10px 0 0;
  }

  .filter_wrapper {
    padding: 4px;
  }

  .filter_minus { margin-left: 50px; font-weight: bold }
}

@media screen and (max-width: 500px) {
  .column_1 {
    width: 100%;
  }

  .column_2 {
    width: 100%;
  }

  .list-a {
    color: darkgray;
    padding: 2px;
    margin: 0 10px 0 0;
  }

  .site-title {
    margin: 0 10px 0 0;
  }
}

